//
// Copyright 2019 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak;

import "third_party/google/rpc/status.proto";

// The Storage service is the interface between the StorageChannel and a
// StorageProvider implementation of persistent storage.  Each request
// message contains a storage_id that uniquely identifies the logical
// storage instance for the operation and the StorageProvider implementation
// determines how it is used.  The storage_id is generated by the StorageChannel.
// TODO: Consider merging storage_id into the name field to make the
// interface truly opaque.
service Storage {
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Write(WriteRequest) returns (WriteResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);

  rpc Begin(BeginRequest) returns (BeginResponse);
  rpc Commit(CommitRequest) returns (CommitResponse);
  rpc Rollback(RollbackRequest) returns (RollbackResponse);
}

message ReadRequest {
  bytes storage_id = 1;
  bytes transaction_id = 2;
  bytes name = 3;
}

message ReadResponse {
  bytes value = 1;
}

message WriteRequest {
  bytes storage_id = 1;
  bytes transaction_id = 2;
  bytes name = 3;
  bytes value = 4;
}

message WriteResponse {
}

message DeleteRequest {
  bytes storage_id = 1;
  bytes transaction_id = 2;
  bytes name = 3;
}

message DeleteResponse {
}

message BeginRequest {
  bytes storage_id = 1;
}

message BeginResponse {
  bytes transaction_id = 1;
}

message CommitRequest {
  bytes storage_id = 1;
  bytes transaction_id = 2;
}

message CommitResponse {
}

message RollbackRequest {
  bytes storage_id = 1;
  bytes transaction_id = 2;
}

message RollbackResponse {
}

// TODO: Move wrapper messages to a separate storage channel proto.
// Wrapper message used to send requests via the StorageChannel interface.
message StorageOperationRequest {
  // The storage name is used to partition data within an Oak Module and is
  // not exposed to the Storage service.  The StorageChannel generates a
  // unique storage_id from storage_name and the Oak Module identifier to
  // prevent name collisions among Oak Modules.
  bytes storage_name = 1;

  oneof operation {
    ReadRequest read_request = 2;
    WriteRequest write_request = 3;
    DeleteRequest delete_request = 4;
    BeginRequest begin_request = 5;
    CommitRequest commit_request = 6;
    RollbackRequest rollback_request = 7;
  }
}

// TODO: Move wrapper messages to a separate storage channel proto.
// Wrapper message used to send responses via the StorageChannel interface.
message StorageOperationResponse {
  // The status returned by the wrapped storage operation.
  google.rpc.Status status = 1;

  oneof operation {
    ReadResponse read_response = 2;
    WriteResponse write_response = 3;
    DeleteResponse delete_response = 4;
    BeginResponse begin_response = 5;
    CommitResponse commit_response = 6;
    RollbackResponse rollback_response = 7;
  }
}
